--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
-    "dist": "git subtree push --prefix dist origin main"
+    "dist": "vite build && git subtree push --prefix dist origin main"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
